# brave-sync

./: .gitignore  LICENSE  README.md  bootstrap.sh  cliff.toml  env.sh  install.sh  pyproject.toml  pyrightconfig.json  uninstall.sh  update.sh
.github/workflows/: release-on-tag.yml
cli/: brave_sync.sh
desktop/: brave-backup.desktop  restore-brave.desktop
scripts/: backup_brave.sh  check_update.sh  config.sh  configure_sync_path.sh  core.sh  env.sh  functions.sh  help.sh  restore_brave.sh  sync.sh  uninstall.sh  update.sh  version.sh
src/brave_sync/: __main__.py  cli.py
src/brave_sync/commands/: backup.py  config.py  restore.py  verify.py  version.py
src/brave_sync/core/: io.py  path.py  store.py
